[package]
name = "diem-transaction-generator"
version = "0.0.1"
authors = ["Diem Association <opensource@diem.com>"]
description = "Generates transactions to submit to node"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bcs = "0.1.2"
itertools = "0.10.0"
rand = "0.8.3"
structopt = "0.3.21"
hex = "0.4.3"

tokio = { version = "1.8.1", features = ["full"] }

diem-client = { path = "../client"}
diem-sdk = { path = ".." }
generate-key = { path = "../../config/generate-key" }
diem-crypto = { path = "../../crypto/crypto", features=["cloneable-private-keys"] }

diem-types = { path = "../../types" }
diem-logger = { path = "../../common/logger" }
diem-retrier = { path = "../../common/retrier" }
diem-workspace-hack = { path = "../../common/workspace-hack" }

[dev-dependencies]
